--- a/JSON2OWL/arcgis/config.ini
+++ b/JSON2OWL/arcgis/config.ini
@@ -1,4 +1,4 @@
-[saga]
+[arcinfo]
 manual_url = hasManualPageURL
 optional = isOptional
 exec = hasExecutable
@@ -39,11 +39,3 @@ Fire Spreading = Simulation
 Erosion = Simulation
 Visualization = Visualization
 [format]
-Grid = SAGA_GIS_Binary_Grid
-Grid list = SAGA_GIS_Binary_Grid
-Shapes = ESRI_Shapefile
-Shapes list = ESRI_Shapefile
-Shapefile = ESRI_Shapefile
-Table = TXT
-Point Cloud = SPC
-Point Cloud list = SPC
