--- a/JSON2OWL/taudem/config.ini
+++ b/JSON2OWL/taudem/config.ini
@@ -8,6 +8,8 @@ explanation = comment
 optional = isOptional
 parameter = hasParameterName
 dataType = hasDataTypeStr
+title = hasName
+defaultValue = hasDefaultValue
 [format]
 Raster Layer = GeoTIFF
 Raster Dataset = GeoTIFF
