geospatial tools json to owl

--- a/JSON2OWL/arcgis/config.ini
+++ b/JSON2OWL/arcgis/config.ini
@@ -1,41 +1,25 @@
-[arcinfo]
-manual_url = hasManualPageURL
-optional = isOptional
-exec = hasExecutable
-cmd_line = hasUsage
-type = hasDataTypeStr
-constraints = hasConstraint
-identifier = hasFlag
-default = hasDefaultValue
-keywords = hasKeyword
-isOutputFile = isOutputFile
-isInputFile = isInputFile
-description = description
-name = hasParameterName
-minimum =hasMinimum
-maximum =hasMaximum
-fields_des = description
-parameters_des = description
 [task]
-Spatial and Geostatistics = Geostatistic
-Terrain Analysis = TerrainAnalysis
-Climate = ClimateAnalysis
-Garden = Garden
-Grid = RasterAnalysis
+Geostatisical Analyst = Geostatistic
+Spatial Statistics = Geostatistic
+Linear Referencing = LinearReferencing
+3D Analyst = VoxelAnalysis
+Analysis = SpatialAnalysis
+Spatial Analyst = SpatialAnalysis
+Cartography = Cartography
+Coverage = CoverageAnalysis
+Data Interoperability = Conversion
+Data Management = DataManagement
+Parcel Fabric = DataManagement
+Schematics = DataManagement
+Server = GeoService
+Editing = Cartography
+Conversion = Conversion
+Geocoding = Geocoding
+ModelBuilder = AnalysisWorkflow
+Multidimension = Conversion
+Network Analyst = NetworkAnalysis
 Point Clouds = PointDataAnalysis
-Shapes = VectorAnalysis
-Projection = Georeferencing
-Imagery = ImageAnalysis
-Import = Conversion
-Export = Conversion
-Reports = GeneralTask
-Tools = GeneralTask
-Calculus = Calculator
-Geomorphology = DTMAnalysis
-Landscape Evolution = DTMAnalysis
-Hydrology = HydrologicModeling
-Ecology = EcologicalModeling
-Fire Spreading = Simulation
-Erosion = Simulation
-Visualization = Visualization
+Terrain Analysis = TerrainAnalysis
+Tracking Analyst = TrackingAnalysis
+Samples = SamplingAndResampling
 [format]
