--- a/JSON2OWL/grass/config.ini
+++ b/JSON2OWL/grass/config.ini
@@ -1,41 +1,79 @@
 [grass]
-manual_url = hasManualPageURL
-optional = isOptional
-exec = hasExecutable
-cmd_line = hasUsage
-type = hasDataTypeStr
-constraints = hasConstraint
-identifier = hasFlag
-default = hasDefaultValue
-keywords = hasKeyword
-isOutputFile = isOutputFile
-isInputFile = isInputFile
-description = description
-name = hasParameterName
-minimum =hasMinimum
-maximum =hasMaximum
-fields_des = description
-parameters_des = description
+
 [task]
-Spatial and Geostatistics = Geostatistic
-Terrain Analysis = TerrainAnalysis
-Climate = ClimateAnalysis
-Garden = Garden
-Grid = RasterAnalysis
-Point Clouds = PointDataAnalysis
-Shapes = VectorAnalysis
-Projection = Georeferencing
-Imagery = ImageAnalysis
-Import = Conversion
-Export = Conversion
-Reports = GeneralTask
-Tools = GeneralTask
-Calculus = Calculator
-Geomorphology = DTMAnalysis
-Landscape Evolution = DTMAnalysis
-Hydrology = HydrologicModeling
-Ecology = EcologicalModeling
-Fire Spreading = Simulation
-Erosion = Simulation
-Visualization = Visualization
+; grass-7.5_html_manual/manuals/keywords.html
+zonal statistics = Geostatistic
+statistics = Geostatistic
+focal statistics = Geostatistic
+position = LocationAnalysis
+LIDAR = LIDARAnalysis
+r3 = VoxelAnalysis
+voxel = VoxelAnalysis
+volume = TerrainAnalysis
+landscape structure analysis = TerrainAnalysis
+hillshade = TerrainAnalysis
+relief = TerrainAnalysis
+slope = TerrainAnalysis
+sink = TerrainAnalysis
+fill sinks = TerrainAnalysis
+viewshed = TerrainAnalysis
+topographic index = TerrainAnalysis
+contour = TerrainAnalysis
+contours = TerrainAnalysis
+curvature = TerrainAnalysis
+line of sight = TerrainAnalysis
+terrain = TerrainAnalysis
+terrain patterns = TerrainAnalysis
+cartography = Cartography
+db = DatabaseManagement
+r = RasterAnalysis
+points = PointDataAnalysis
+point cloud = PointDataAnalysis
+point pattern = PointDataAnalysis
+point density = PointDataAnalysis
+v = VectorAnalysis
+projection = Georeferencing
+i = ImageAnalysis
+d = Display
+conversion = Conversion
+transformation = Conversion
+import = Conversion
+export = Conversion
+g = GrassGeneral
+m = GeneralTask
+surface = DTMAnalysis
+network = NetworkAnalysis
+salesman = NetworkAnalysis
+network maintenance = NetworkAnalysis
+network generalization = NetworkAnalysis
+watershed = HydrologicModeling
+flood = HydrologicModeling
+groundwater flow = HydrologicModeling
+flow = HydrologicModeling
+hydrology = HydrologicModeling
+wetness = HydrologicModeling
+stream network = HydrologicModeling
+rainfall = HydrologicModeling
+overland flow = HydrologicModeling
+t = SpatialTemporalAnalysis
+fire = Simulation
+sediment flow = Simulation
+visualization = Visualization
+color table = Visualization
+interpolation = Interpolation
+sampling = SamplingAndResampling
+resample = SamplingAndResampling
+soil = SoilMapping
 [format]
+
+[tools]
+d = display
+db =database
+g=general
+m=general
+ps=general
+i=imagery
+r=raster
+r3= three_d_raster
+v=vector
+t=temporal
