--- a/JSON2OWL/saga/config.ini
+++ b/JSON2OWL/saga/config.ini
@@ -39,8 +39,9 @@ Fire Spreading = Simulation
 Erosion = Simulation
 Visualization = Visualization
 [format]
-Grid = SAGA_GIS_Binary_Grid
-Grid list = SAGA_GIS_Binary_Grid
+;SAGA_GIS_Binary_Grid
+Grid = SAGA
+Grid list = SAGA
 Shapes = ESRI_Shapefile
 Shapes list = ESRI_Shapefile
 Shapefile = ESRI_Shapefile
