--- a/JSON2OWL/saga/config.ini
+++ b/JSON2OWL/saga/config.ini
@@ -7,7 +7,7 @@ type = hasDataTypeStr
 constraints = hasConstraint
 identifier = hasFlag
 default = hasDefaultValue
-keywords = hasKeyword
+keywords = hasKeywords
 isOutputFile = isOutputFile
 isInputFile = isInputFile
 description = description
