update json to owl

--- a/JSON2OWL/taudem/config.ini
+++ b/JSON2OWL/taudem/config.ini
@@ -2,7 +2,7 @@
 ; 未列出的直接创建新的关系：has[Name]
 [taudem]
 ; dcterms:abstract
-summary = abstract
+summary = description
 ; rdfs:comment
 explanation = comment
 optional = isOptional
