--- a/JSON2OWL/saga/config.ini
+++ b/JSON2OWL/saga/config.ini
@@ -1,21 +1,21 @@
 [saga]
-manual_url = hasManualPageURL
-optional = isOptional
-exec = hasExecutable
-cmd_line = hasUsage
-type = hasDataTypeStr
-constraints = hasConstraint
-identifier = hasFlag
-default = hasDefaultValue
-keywords = hasKeywords
-isOutputFile = isOutputFile
-isInputFile = isInputFile
-description = description
-name = hasParameterName
-minimum =hasMinimum
-maximum =hasMaximum
-fields_des = description
-parameters_des = description
+;manual_url = hasManualPageURL
+;optional = isOptional
+;exec = hasExecutable
+;cmd_line = hasUsage
+;type = hasDataTypeStr
+;constraints = hasConstraint
+;identifier = hasFlag
+;default = hasDefaultValue
+;keywords = hasKeywords
+;isOutputFile = isOutputFile
+;isInputFile = isInputFile
+;description = description
+;name = hasParameterName
+;minimum =hasMinimum
+;maximum =hasMaximum
+;fields_des = description
+;parameters_des = description
 [task]
 Spatial and Geostatistics = Geostatistic
 Terrain Analysis = TerrainAnalysis
@@ -48,3 +48,7 @@ Shapefile = ESRI_Shapefile
 Table = TXT
 Point Cloud = SPC
 Point Cloud list = SPC
+[datatype]
+Integer = int
+Floating point = float
+Boolean = bool
