--- a/JSON2OWL/taudem/config.ini
+++ b/JSON2OWL/taudem/config.ini
@@ -1,16 +1,29 @@
 ; JSON 中属性名称与本体中属性名称的对应关系
 ; 未列出的直接创建新的关系：has[Name]
+[package]
+;general package information
+name = TauDEM
+title = TauDEM Tools
+model_uri = http://www.egc.org/ont/process/taudem
+json = taudem.json
+software = TauDEM
+version = 5.3
 [taudem]
-; dcterms:abstract
-summary = description
-; rdfs:comment
-explanation = comment
-optional = isOptional
-parameter = hasParameterName
-dataType = hasDataTypeStr
-title = hasName
-defaultValue = hasDefaultValue
+;attribute in json = properties defined in gis-process ontology
+usage = commandLine
+isOptional = isOptional
+parameterName = parameterName
+dataType = datatypeInString
+name = prefLabel
+defaultValue = defaultValue
+[classes]
+; class = parent class in geoprocessing
+TauDEMAnalysis = GeoprocessingFunctionality
+TauDEMInput = InputData
+TauDEMOutput = OutputData
+TauDEMOption = Option
 [format]
+; format in json = format in data ontology
 Raster Layer = GeoTIFF
 Raster Dataset = GeoTIFF
 Feature Layer = ESRI_Shapefile
@@ -18,3 +31,100 @@ File = TXT
 Text File = TXT
 DBFile = DBF
 Table View = DBF
+[task]
+BasicGridAnalysis = [
+                    "D-Infinity Contributing Area",
+                    "D-Infinity Flow Directions",
+                    "D8 Contributing Area",
+                    "D8 Flow Directions",
+                    "Grid Network",
+                    "Pit Remove"]
+SINMAPStabilityIndex = [
+                       "Create Parameter Region Grid",
+                       "Stability Index"]
+StreamNetworkAnalysis = [
+                        "ConnectDown",
+                        "D8 Extreme Upslope Value",
+                        "GageWatershed",
+                        "Length Area Stream Source",
+                        "Move Outlets To Streams",
+                        "Peuker Douglas",
+                        "Peuker Douglas Stream Definition",
+                        "Slope Area Combination",
+                        "Slope Area Stream Definition",
+                        "Stream Definition By Threshold",
+                        "Stream Definition With Drop Analysis",
+                        "Stream Drop Analysis",
+                        "Stream Reach And Watershed",
+                        "Watershed Grid To Shapefile"]
+SpecializedGridAnalysis = [
+                          "D-Infinity Avalanche Runout",
+                          "D-Infinity Concentration Limited Acccumulation",
+                          "D-Infinity Decaying Accumulation",
+                          "D-Infinity Distance Down",
+                          "D-Infinity Distance Up",
+                          "D-Infinity Reverse Accumulation",
+                          "D-Infinity Transport Limited Accumulation",
+                          "D-Infinity Upslope Dependence",
+                          "D8 Distance To Streams",
+                          "Slope Average Down",
+                          "Slope Over Area Ratio",
+                          "Topographic Wetness Index"]
+[dataTheme]
+;starts with Input_/Output_, (Input_/Output_)D8_/D-infinity_ ,ends with _Grid
+;from parameter name
+Elevation = DEM
+Flow_Direction = flow_direction
+Stream_Source = stream_source
+Stream_Raster = stream
+Outlets = outlet
+Slope = slope
+Area = area
+Slope_Area = slope_area
+Accumulated_Stream_Source = accumulated_stream_source
+Mask = mask
+Length = length
+Contributing_Area = contributing_area
+;hydrologically_correct_elevation
+Pit_Filled_Elevation = filled_DEM
+Pit_Removed_Elevation = filled_DEM
+Drainage_Area = drainage_area
+Watershed = watershed
+Stream_Order = stream_order
+Network_Connectivity_Tree = network_connectivity_tree
+Network_Coordinates = network_coordinates
+Stream_Reach = stream_reach
+Gages = gage
+GageWatershed = gage_watershed
+Downstream_Identefier = downstream_identefier
+MovedOutlets = movedoutlets
+Reverse_Accumulation = reverse_accumulation
+Maximum_Downslope = maximum_downslope
+Destination = destination
+Upslope_Dependence = upslope_dependence
+Distance_to_Streams = distance_to_streams
+Specific_Catchment_Area = specific_catchment_area
+Wetness_Index = topographic_wetness_index
+Slope_Divided_By_Area_Ratio = slope_divided_by_area_ratio
+Supply = supply
+Transport_Capacity = transport_capacity
+Concentration = concentration
+Transport_Limited_Accumulation = transport_limited_accumulation
+Deposition = deposition
+Distance = distance
+Weight_Path = weight_path
+Slope_Average_Down = slope_average_down
+Drop_to_Stream = drop_to_stream
+Distance_Up = distance_up
+Effective_Runoff_Weight = effective_runoff_weight
+Disturbance_Indicator = disturbance_indicator
+Decay_Multiplier = decay_multiplier
+Overland_Flow_Specific_Discharge = overland_flow_specific_discharge
+Strahler_Network_Order = strahler_network_order
+Longest_Upslope_Length = longest_upslope_length
+Total_Upslope_Length = total_upslope_length
+Decayed_Specific_Catchment_Area = decayed_specific_catchment_area
+Avalanche_Source_Site = avalanche_source_site
+Runout_Zone = runout_zone
+Path_Distance = path_distance
+Depression_Mask = depression_mask
