--- a/JSON2OWL/taudem/config.ini
+++ b/JSON2OWL/taudem/config.ini
@@ -12,7 +12,6 @@ version = 5.3
 ;attribute in json = properties defined in gis-process ontology
 usage = commandLine
 isOptional = isOptional
-parameterName = parameterName
 dataType = datatypeInString
 name = prefLabel
 defaultValue = defaultValue
@@ -31,6 +30,9 @@ File = TXT
 Text File = TXT
 DBFile = DBF
 Table View = DBF
+[similar]
+D8 Contributing Area = D-Infinity Contributing Area
+D8 Flow Directions = D-Infinity Flow Directions
 [task]
 BasicGridAnalysis = [
                     "D-Infinity Contributing Area",
