--- a/JSON2OWL/whitebox/config.ini
+++ b/JSON2OWL/whitebox/config.ini
@@ -15,3 +15,4 @@ LiDAR Tools = LIDARAnalysis
 Hydrological Analysis = HydrologicModeling
 Stream Network Analysis = TerrainAnalysis
 [format]
+[similar]
